# sgents

./: main.py  pyproject.toml
sgents/: _api_key_tools.py  _atomic_tools.py  _save_config.py
sgents/ui/: _main_interface.py  _user_interface.py
